--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -38,6 +38,7 @@
 	"Your email address will not be published. Required fields are marked": "Thông tin E-mail không được công khai, các thông tin bắt buộc được đánh dấu",
 	"Customer service": "Dịch vụ chăm sóc khách hàng",
 	"Webmaster": "Quản trị trang web",
+	"Subscribe to our email newsletter & receive updates right in your inbox.": "Đăng ký nhận thông báo mới từ hệ thống.",
 	
 	
 	"EOF": "EOF"
