--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -42,6 +42,12 @@
 	"Webmaster": "Quản trị trang web",
 	"Subscribe to our email newsletter & receive updates right in your inbox.": "Đăng ký nhận thông báo mới từ hệ thống.",
 	"Do you want use this coupon ?": "Bạn muốn sử dụng mã giảm giá này?",
-	
+	"Do you want remove this coupon ?": "Bạn muốn hủy sử dụng mã giảm giá này?",
+	"Apply coupon code success.": "Áp dụng mã khuyến mãi thành công.",
+	"Remove coupon code success.": "Đã hủy áp dụng mã khuyến mãi.",
+	"The coupon code does not exist.": "Mã khuyến mãi không tồn tại",
+	"The coupon code has expired.": "Mã khuyến mãi đã hết hạn.",
+	"Coupon Discount": "Giảm giá khuyến mãi",
+	"Create order success": "Đặt hàng thành công.",
 	"EOF": "EOF"
 }
