--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -27,7 +27,7 @@
 	"Done Orders": "Đã hoàn thành",
 	"Canceled Orders": "Đã hủy",
 	"Payment Method": "Phương thức thanh toán",
-	"Address": "Thông tin cá nhân",
+	"Address": "Địa chỉ",
 	
 	"Password change": "Thay đổi mật khẩu",
 	"Current Password": "Mật khẩu cũ",
