--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -49,5 +49,6 @@
 	"The coupon code has expired.": "Mã khuyến mãi đã hết hạn.",
 	"Coupon Discount": "Giảm giá khuyến mãi",
 	"Create order success": "Đặt hàng thành công.",
+	"Created at": "Tạo lúc",
 	"EOF": "EOF"
 }
